--- a/css/cv.css
+++ b/css/cv.css
@@ -1,5 +1,4 @@
 h1 {
-	margin-top: 50px;
     text-align: center;
     padding: 10px 0;
     color: #f1f1f1;
@@ -15,33 +14,32 @@ h1 {
 .box-timeline {
     width: 100%;
     height: 2400px;
-	background-image: linear-gradient(12deg, #FFFFFF 0%, #7b7b7d 50%, #000000 100%);
+    background-image: linear-gradient(12deg, #FFFFFF 0%, #7b7b7d 50%, #000000 100%);
     position: relative;
     padding: 80px 0 250px 0;
     margin-bottom: 100px;
 }
 .scool{
-	width: 100%;
-	height: 400px;
-	background: transparent;
+    width: 100%;
+    height: 500px;
+    background-image: linear-gradient(12deg, #FFFFFF 0%, #7b7b7d 50%, #000000 100%);
     position: relative;
-    margin-bottom: 45px;
 }
 .ligne2{
-	height: 8px;
-	width: 800px;
-	margin: 0 auto;
-	background-color: #333;
+    height: 8px;
+    width: 800px;
+    margin: 0 auto;
+    background-color: #333;
 }
 .ligne{
-	margin-top: 150px;
-	height: 2304px;
-	width: 8px;
-	margin: 0 auto;
-	background-color: #333;
+    margin-top: 150px;
+    height: 2304px;
+    width: 8px;
+    margin: 0 auto;
+    background-color: #333;
 }
 .ligne2, .rond2{
-	margin-top: 150px;
+    margin-top: 150px;
 }
 
 
@@ -60,8 +58,8 @@ h1 {
     font-size: 40px;
 }
 .rond2{
-	top: 35px;
-	width: 50px;
+    top: 50px;
+    width: 50px;
     height: 50px;
     border-radius: 50%;
     background: #333;
@@ -83,12 +81,12 @@ h1 {
 .r7{top: 1998px;}
 .r8{top: 2304px;}
 .r9{
-	margin-left: 426px;
+    margin-left: 426px;
     left: 50%;
 }
 .r10{left: 50%;}
 .r11{
-	left: 50%;
+    left: 50%;
     margin-left: -426px;
 }
 
@@ -106,7 +104,7 @@ h1 {
     transform: translate(-50%);
 }
 .box2 {
-	top: 245px;
+    top: 270px;
     color: #333;
     width: 200px;
     min-height: auto;
@@ -118,60 +116,63 @@ h1 {
     position: absolute;
 }
 .b1{
-	top: 80px;
-	left: calc(50% - 270px);
+    top: 80px;
+    left: calc(50% - 270px);
 }
 .b2{
-	top: 386px;
-	left: calc(50% + 270px);
+    top: 386px;
+    left: calc(50% + 270px);
 }
 .b3{
-	top: 692px;
-	left: calc(50% - 270px);
+    top: 692px;
+    left: calc(50% - 270px);
 }
 .b4{
-	top: 1000px;
-	left: calc(50% + 270px);
+    top: 1000px;
+    left: calc(50% + 270px);
 }
 .b5{
-	top: 1306px;
-	left: calc(50% - 270px);
+    top: 1306px;
+    left: calc(50% - 270px);
 }
 .b6{
-	top: 1692px;
-	left: calc(50% + 270px);
+    top: 1692px;
+    left: calc(50% + 270px);
 }
 .b7{
-	top: 1998px;
-	left: calc(50% - 270px);
+    top: 1998px;
+    left: calc(50% - 270px);
 }
 .b8{
-	top: 2304px;
-	left: calc(50% + 270px);
+    top: 2304px;
+    left: calc(50% + 270px);
 }
 .b9{
-	margin-left: 317px;
+    margin-left: 317px;
     left: 50%;
 }
 .b10{
-	left: 50%;
-	margin-left: -103px;
+    left: 50%;
+    margin-left: -103px;
 }
 .b11{
-	left: 50%;
+    left: 50%;
     margin-left: -547px;
 }
 
 .box p{
-	line-height: 20px;
-	font-size: 18px;
-	margin: 10px 0 20px 0;
+    line-height: 20px;
+    font-size: 18px;
+    margin: 10px 0 20px 0;
 }
 .box a{
-	display: none;
+    display: none;
 }
 
 @media screen and (max-width: 1000px) {
+    .scool{
+        height: 500px;
+    }
     .ligne {
         position: relative;
         left: 210px;
